--- a/XV.html
+++ b/XV.html
@@ -823,7 +823,7 @@
                             </div>
                             <div class="elementor-element elementor-element-8ad0a29 elementor-invisible elementor-widget elementor-widget-heading" data-id="8ad0a29" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Times New Roman';">Parroquia San Ramón Nonato, C. Porres Baranda 628
+                                    <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Times New Roman';">Parroquia Inmaculada Concepción, Pablo Gutiérrez 12, Centro, Cdad. Cuauhtémoc, Ver.
 </h2>
                                 </div>
                             </div>
@@ -835,7 +835,7 @@
                             <div class="elementor-element elementor-element-245ec2d elementor-align-center elementor-invisible elementor-widget elementor-widget-button" data-id="245ec2d" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="button.default">
                                 <div class="elementor-widget-container">
                                     <div class="elementor-button-wrapper">
-                                        <a class="elementor-button elementor-button-link elementor-size-sm" href="https://maps.app.goo.gl/aFfUgso9RjzB6ftp9">
+                                        <a class="elementor-button elementor-button-link elementor-size-sm" href="https://maps.app.goo.gl/dY1CQwTHFufi7SYk7">
                                             <span class="elementor-button-content-wrapper">
                                                 <span class="elementor-button-text">IR A MAPS</span>
                                             </span>
@@ -898,8 +898,8 @@
                             <div class="elementor-element elementor-element-93079b5 elementor-invisible elementor-widget elementor-widget-heading" data-id="93079b5" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
                                     <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Times New Roman';">
-                                        Eventos Jazmin<br>
-                                        <br>C. del Zoológico 508, Colinas de Huentitán, 44259 Guadalajara, Jal.
+                                        <br>
+                                        <br>C. Tuxpan Col. Benito Juarez
                                     
                                     </h2>
                                 </div>
@@ -912,7 +912,7 @@
                             <div class="elementor-element elementor-element-7510346 elementor-align-center elementor-invisible elementor-widget elementor-widget-button" data-id="7510346" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="button.default">
                                 <div class="elementor-widget-container">
                                     <div class="elementor-button-wrapper">
-                                        <a class="elementor-button elementor-button-link elementor-size-sm" href="https://maps.app.goo.gl/gtd5XaksHTH8daNg7">
+                                        <a class="elementor-button elementor-button-link elementor-size-sm" href="https://maps.app.goo.gl/6z9wmyqxqCRNvbxUA">
                                             <span class="elementor-button-content-wrapper">
                                                 <span class="elementor-button-text">IR A MAPS</span>
                                             </span>
