--- a/XV.html
+++ b/XV.html
@@ -612,7 +612,7 @@
                                             <div class="elementor-element elementor-element-d40ae5e elementor-widget elementor-widget-heading" data-id="d40ae5e" data-element_type="widget" data-widget_type="heading.default">
                                                 <div class="elementor-widget-container">
                                                     <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Playfair Display', serif; font-style: italic; font-size: 28px; color: #001a33;">
-                                                        Iris<br>Sánchez
+                                                        Iris Arlett<br>Sánchez Ortiz
                                                     
                                                     </h2>
                                                 </div>
@@ -652,7 +652,7 @@
                                             <div class="elementor-element elementor-element-18a0ddd elementor-widget elementor-widget-heading" data-id="18a0ddd" data-element_type="widget" data-widget_type="heading.default">
                                                 <div class="elementor-widget-container">
                                                     <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Playfair Display', serif; font-style: italic; font-size: 25px;">
-                                                        Cecilia<br>Sánchez  
+                                                        Cecilia<br>Sánchez Ortiz
                                                     </h2>
                                                 </div>
                                             </div>
@@ -1084,7 +1084,7 @@
                             </div>
                             <div class="elementor-element elementor-element-5bab4ac elementor-invisible elementor-widget elementor-widget-heading" data-id="5bab4ac" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Times New Roman';">Causal-Formal</h2>
+                                    <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Times New Roman';">Casual-Formal</h2>
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-c58b328 elementor-invisible elementor-widget elementor-widget-heading" data-id="c58b328" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
