--- a/XV.html
+++ b/XV.html
@@ -898,8 +898,8 @@
                             <div class="elementor-element elementor-element-93079b5 elementor-invisible elementor-widget elementor-widget-heading" data-id="93079b5" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
                                     <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Times New Roman';">
-                                        <br>
-                                        <br>C. Tuxpan Col. Benito Juarez
+                                        <br>Pablo a Gutiérrez número 301 zona centro Pueblo Viejo Veracruz 92030 <br>
+                                        <br>Entrada por la calle Brasil
                                     
                                     </h2>
                                 </div>
@@ -912,7 +912,7 @@
                             <div class="elementor-element elementor-element-7510346 elementor-align-center elementor-invisible elementor-widget elementor-widget-button" data-id="7510346" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="button.default">
                                 <div class="elementor-widget-container">
                                     <div class="elementor-button-wrapper">
-                                        <a class="elementor-button elementor-button-link elementor-size-sm" href="https://maps.app.goo.gl/6z9wmyqxqCRNvbxUA">
+                                        <a class="elementor-button elementor-button-link elementor-size-sm" href="https://maps.app.goo.gl/iMzpvUfmK6QmdMZs9">
                                             <span class="elementor-button-content-wrapper">
                                                 <span class="elementor-button-text">IR A MAPS</span>
                                             </span>
@@ -1084,7 +1084,7 @@
                             </div>
                             <div class="elementor-element elementor-element-5bab4ac elementor-invisible elementor-widget elementor-widget-heading" data-id="5bab4ac" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Times New Roman';">Casual-Formal</h2>
+                                    <h2 class="elementor-heading-title elementor-size-default" style="font-family: 'Times New Roman';">Causal-Formal</h2>
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-c58b328 elementor-invisible elementor-widget elementor-widget-heading" data-id="c58b328" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
